Fix full image area overflowing the embed space on websites that have gutters.

--- a/kronofoto/static/assets/scss/components/exhibit/full-image-area.scss
+++ b/kronofoto/static/assets/scss/components/exhibit/full-image-area.scss
@@ -121,7 +121,7 @@
   &__image {
     height: 100vh;
     //@media screen and (min-width: 48em) {
-      width: 100vw;
+      width: 100%;
       .page-editor & {
         height: 100%;
         width: 100%;
